Исправлены ошибки checkstyle и переписана removeLast на более старый аналог